--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -17,7 +17,7 @@
         "utilities": "Firmware Utilities",
         "firmware_toolbox": "Firmware Toolbox",
         "serial_tools": "Serial Tools",
-        "convert_tools": "Image & Convert",
+        "convert_tools": "Embedded Tools",
         "settings": "Settings",
         "community": "LILYGO Community",
         "lilygo_related": "LILYGO Related"
@@ -66,6 +66,80 @@
             "aliexpress": "LILYGO AliExpress Store",
             "community": "LILYGO Community Forum"
         }
+    },
+    "utilities": {
+        "analyzer": "Firmware Analyzer",
+        "partition_editor": "Partition Table Editor",
+        "image_converter": "Image Converter",
+        "regulator_resistor": "Voltage Divider Calculator",
+        "regulator_desc": "Calculate resistor values for adjustable LDOs (e.g. LM317, AMS1117-adj). Vout = Vref × (1 + R2/R1)",
+        "regulator_vref": "Vref (V)",
+        "regulator_vout": "Vout (V)",
+        "regulator_r1": "R1 (Ω)",
+        "regulator_r2": "R2 (Ω)",
+        "rc_time_constant": "RC Time Constant",
+        "rc_desc": "RC charge/discharge time constant and RC filter cutoff. τ = R×C, fc = 1/(2πRC)",
+        "rc_r": "R",
+        "rc_c": "C",
+        "smd_resistor": "SMD Resistor Calculator",
+        "smd_mode_3digit": "3-Digit EIA",
+        "smd_mode_4digit": "4-Digit EIA",
+        "smd_mode_eia96": "EIA-96",
+        "smd_desc_3digit": "First 2 digits are significant, 3rd is multiplier. R indicates decimal point (e.g. 4R7=4.7Ω, 472=4.7kΩ).",
+        "smd_desc_4digit": "First 3 digits are significant, 4th is multiplier. R for decimal (e.g. 1002=10kΩ).",
+        "smd_desc_eia96": "2-digit code (01-96) + 1 letter (multiplier). Numbers map to E96 values; letters Y=0.01, X=0.1, A=1, B=10, C=100, D=1k, E=10k, F=100k.",
+        "smd_d1": "Digit 1",
+        "smd_d2": "Digit 2",
+        "smd_d3": "Digit 3",
+        "smd_mult": "Multiplier",
+        "smd_eia96_code": "Code (01-96)",
+        "smd_eia96_mult": "Multiplier letter",
+        "smd_preview": "Resistor preview",
+        "smd_result": "Resistance",
+        "led_resistor": "LED Series Resistor Calculator",
+        "led_resistor_desc": "Calculate the resistor needed to drive one or more LEDs in series at a given current.",
+        "led_resistor_hint": "Choose a resistor with 2–10× the calculated power rating to avoid overheating.",
+        "led_vs": "Supply Voltage",
+        "led_vf": "Forward Voltage",
+        "led_if": "Forward Current",
+        "led_if_dim": "Dim",
+        "led_if_dim_desc": "Visible in dark, barely visible in daylight. Many LEDs glow at 0.05mA",
+        "led_if_weak": "Very dim",
+        "led_if_weak_desc": "Noticeably lit but weak. Night indicator, low-power status",
+        "led_if_medium": "Medium",
+        "led_if_medium_desc": "Clearly visible indoors, not glaring. 5mA ≈70% perceived brightness",
+        "led_if_bright": "Bright",
+        "led_if_bright_desc": "Obviously bright, default range for most products",
+        "led_if_max": "Max",
+        "led_if_max_desc": "20mA is the common rated maximum continuous current",
+        "led_count": "LEDs in Series",
+        "led_r_result": "Resistor Value",
+        "led_p_result": "Power Dissipation",
+        "led_formula": "Formula",
+        "led_circuit": "Circuit Diagram",
+        "led_vf_table": "LED Color Typical Vf Range",
+        "led_table_color": "Color",
+        "led_table_vf": "Vf Range (V)",
+        "led_color_red": "Red",
+        "led_color_amber": "Amber",
+        "led_color_orange": "Orange",
+        "led_color_yellow": "Yellow",
+        "led_color_green": "Green",
+        "led_color_blue": "Blue",
+        "led_color_white": "White",
+        "btn_analyze": "Analyze",
+        "btn_export": "Export",
+        "btn_import": "Import",
+        "partition_table": "Partition Table",
+        "raw_data": "Raw Analysis",
+        "detected_chip": "Detected Chip",
+        "flash_info": "Flash Info",
+        "image_type": "Image Type",
+        "full_image": "Full Image",
+        "app_image": "App Image",
+        "no_partitions": "No partition table detected.",
+        "analysis_failed": "Analysis failed",
+        "select_firmware": "Click to select firmware .bin"
     },
     "settings": {
         "title": "Settings",
