--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -6,7 +6,7 @@
     "logout": "ログアウト",
     "login_with_github": "GitHubでログイン",
     "login_to_upload": "ログインで解禁",
-    "login_to_upload_tooltip": "ログイン後にアップロードなど利用可"
+    "login_to_upload_tooltip": "ログイン後にファームウェアをアップロードなどが利用できます"
   },
   "nav": {
     "guide": "ガイド",
@@ -17,7 +17,7 @@
     "utilities": "ユーティリティ",
     "firmware_toolbox": "ファームウェアツールボックス",
     "serial_tools": "シリアルツール",
-    "convert_tools": "画像・変換",
+    "convert_tools": "組込みツール",
     "settings": "設定",
     "community": "LILYGO コミュニティ",
     "lilygo_related": "LILYGO 関連"
@@ -70,6 +70,63 @@
   "utilities": {
     "analyzer": "ファームウェア分析",
     "partition_editor": "パーティションテーブルエディタ",
+    "image_converter": "画像変換",
+    "regulator_resistor": "分圧抵抗計算",
+    "regulator_desc": "可変LDO（LM317、AMS1117-adj等）の分圧抵抗を計算。Vout = Vref × (1 + R2/R1)",
+    "regulator_vref": "Vref (V)",
+    "regulator_vout": "Vout (V)",
+    "regulator_r1": "R1 (Ω)",
+    "regulator_r2": "R2 (Ω)",
+    "rc_time_constant": "RC 時定数計算",
+    "rc_desc": "RC 充放電時定数とRCフィルタのカットオフ周波数。τ = R×C、fc = 1/(2πRC)",
+    "rc_r": "R",
+    "rc_c": "C",
+    "smd_resistor": "SMD抵抗値計算",
+    "smd_mode_3digit": "3桁 EIA",
+    "smd_mode_4digit": "4桁 EIA",
+    "smd_mode_eia96": "EIA-96",
+    "smd_desc_3digit": "最初2桁が有効数字、3桁目が10のべき乗。R は小数点（例：4R7=4.7Ω、472=4.7kΩ）。",
+    "smd_desc_4digit": "最初3桁が有効数字、4桁目が10のべき乗。R は小数点（例：1002=10kΩ）。",
+    "smd_desc_eia96": "2桁コード(01-96)+1文字(倍率)。数字はE96基準値、文字は Y=0.01、X=0.1、A=1、B=10、C=100、D=1k、E=10k、F=100k。",
+    "smd_d1": "1桁目",
+    "smd_d2": "2桁目",
+    "smd_d3": "3桁目",
+    "smd_mult": "倍率",
+    "smd_eia96_code": "コード (01-96)",
+    "smd_eia96_mult": "倍率文字",
+    "smd_preview": "抵抗プレビュー",
+    "smd_result": "抵抗値",
+    "led_resistor": "LED 直列抵抗計算",
+    "led_resistor_desc": "指定電流で1つ以上の直列LEDを駆動するのに必要な抵抗を計算。",
+    "led_resistor_hint": "発熱を防ぐため、計算値の2〜10倍の電力定格の抵抗を選んでください。",
+    "led_vs": "電源電圧",
+    "led_vf": "順方向電圧",
+    "led_if": "順方向電流",
+    "led_if_dim": "ほぼ消灯",
+    "led_if_dim_desc": "暗所で見える、日中はほぼ見えない。0.05mAでも発光するLEDが多い",
+    "led_if_weak": "とても暗い",
+    "led_if_weak_desc": "発光はするが弱い。夜間インジケータ、低消費電力向け",
+    "led_if_medium": "中程度",
+    "led_if_medium_desc": "室内で明瞭に見える。5mAで約70%の視覚輝度",
+    "led_if_bright": "明るい",
+    "led_if_bright_desc": "明るい、多くの製品のデフォルト動作範囲",
+    "led_if_max": "最大",
+    "led_if_max_desc": "20mAは一般的な定格最大連続電流",
+    "led_count": "直列LED数",
+    "led_r_result": "抵抗値",
+    "led_p_result": "消費電力",
+    "led_formula": "公式",
+    "led_circuit": "回路図",
+    "led_vf_table": "LED色の典型Vf範囲",
+    "led_table_color": "色",
+    "led_table_vf": "Vf範囲 (V)",
+    "led_color_red": "赤",
+    "led_color_amber": "アンバー",
+    "led_color_orange": "オレンジ",
+    "led_color_yellow": "黄",
+    "led_color_green": "緑",
+    "led_color_blue": "青",
+    "led_color_white": "白",
     "btn_analyze": "分析",
     "btn_export": "エクスポート",
     "btn_import": "インポート",
