--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -6,7 +6,7 @@
     "logout": "退出登录",
     "login_with_github": "使用 GitHub 登录",
     "login_to_upload": "登录解锁更多",
-    "login_to_upload_tooltip": "登录后上传固件等"
+    "login_to_upload_tooltip": "登录后可上传固件及使用更多功能"
   },
   "nav": {
     "guide": "使用指引",
@@ -17,7 +17,7 @@
     "utilities": "固件高级工具",
     "firmware_toolbox": "固件工具箱",
     "serial_tools": "串口工具",
-    "convert_tools": "图片与转换",
+    "convert_tools": "哆啦A梦工具集",
     "settings": "设置",
     "community": "LILYGO 社区",
     "lilygo_related": "LILYGO 相关"
@@ -70,6 +70,63 @@
   "utilities": {
     "analyzer": "固件分析器",
     "partition_editor": "分区表编辑器",
+    "image_converter": "图片转换",
+    "regulator_resistor": "分压电阻计算器",
+    "regulator_desc": "可调稳压芯片（如 LM317、AMS1117-adj）分压电阻计算。Vout = Vref × (1 + R2/R1)",
+    "regulator_vref": "Vref (V)",
+    "regulator_vout": "Vout (V)",
+    "regulator_r1": "R1 (Ω)",
+    "regulator_r2": "R2 (Ω)",
+    "rc_time_constant": "RC 时间常量计算器",
+    "rc_desc": "RC 充放电时间常数与 RC 滤波器截止频率。τ = R×C，fc = 1/(2πRC)",
+    "rc_r": "R",
+    "rc_c": "C",
+    "smd_resistor": "贴片电阻计算器",
+    "smd_mode_3digit": "3位 EIA",
+    "smd_mode_4digit": "4位 EIA",
+    "smd_mode_eia96": "EIA-96",
+    "smd_desc_3digit": "前2位为有效数字，第3位为10的幂。R 表示小数点位置，如 4R7=4.7Ω、472=4.7kΩ。",
+    "smd_desc_4digit": "前3位为有效数字，第4位为10的幂。R 表示小数点，如 1002=10kΩ。",
+    "smd_desc_eia96": "2位数字码(01-96)+1个字母(倍率)。数字对应 E96 基准值，字母 Y=0.01、X=0.1、A=1、B=10、C=100、D=1k、E=10k、F=100k。",
+    "smd_d1": "第1位",
+    "smd_d2": "第2位",
+    "smd_d3": "第3位",
+    "smd_mult": "倍率",
+    "smd_eia96_code": "数字码 (01-96)",
+    "smd_eia96_mult": "倍率字母",
+    "smd_preview": "贴片电阻示意",
+    "smd_result": "阻值结果",
+    "led_resistor": "LED 限流电阻计算器",
+    "led_resistor_desc": "计算在指定电流下驱动一个或多个串联 LED 所需电阻。",
+    "led_resistor_hint": "建议选择功率为计算值 2~10 倍的电阻，避免过热。",
+    "led_vs": "电源电压",
+    "led_vf": "正向电压",
+    "led_if": "正向电流",
+    "led_if_dim": "微微亮",
+    "led_if_dim_desc": "暗环境可见，白天基本看不出。实测很多 LED 在 0.05mA 都会发光",
+    "led_if_weak": "很暗",
+    "led_if_weak_desc": "明显发光但很弱，适合夜间指示灯、低功耗状态提示",
+    "led_if_medium": "中等亮度",
+    "led_if_medium_desc": "室内光线下清楚可见，不刺眼，非常省电。5mA 已有约 70% 视觉亮度",
+    "led_if_bright": "高亮",
+    "led_if_bright_desc": "明显亮，绝大多数产品默认工作区间",
+    "led_if_max": "最亮",
+    "led_if_max_desc": "20mA 为常见标称额定最大持续电流",
+    "led_count": "串联 LED 数量",
+    "led_r_result": "电阻值",
+    "led_p_result": "电阻功耗",
+    "led_formula": "公式",
+    "led_circuit": "电路示意图",
+    "led_vf_table": "LED 颜色典型正向电压范围",
+    "led_table_color": "颜色",
+    "led_table_vf": "Vf 范围 (V)",
+    "led_color_red": "红",
+    "led_color_amber": "琥珀",
+    "led_color_orange": "橙",
+    "led_color_yellow": "黄",
+    "led_color_green": "绿",
+    "led_color_blue": "蓝",
+    "led_color_white": "白",
     "btn_analyze": "分析",
     "btn_export": "导出",
     "btn_import": "导入",
