--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -6,7 +6,7 @@
     "logout": "退出登入",
     "login_with_github": "使用 GitHub 登入",
     "login_to_upload": "登入解鎖更多",
-    "login_to_upload_tooltip": "登入後可上傳韌體等"
+    "login_to_upload_tooltip": "登入後可上傳韌體及使用更多功能"
   },
   "nav": {
     "guide": "使用指引",
@@ -17,7 +17,7 @@
     "utilities": "韌體高級工具",
     "firmware_toolbox": "韌體工具箱",
     "serial_tools": "串口工具",
-    "convert_tools": "圖片與轉換",
+    "convert_tools": "哆啦A夢工具集",
     "settings": "設置",
     "community": "LILYGO 社區",
     "lilygo_related": "LILYGO 相關"
@@ -70,6 +70,63 @@
   "utilities": {
     "analyzer": "韌體分析器",
     "partition_editor": "分割表編輯器",
+    "image_converter": "圖片轉換",
+    "regulator_resistor": "分壓電阻計算器",
+    "regulator_desc": "可調穩壓晶片（如 LM317、AMS1117-adj）分壓電阻計算。Vout = Vref × (1 + R2/R1)",
+    "regulator_vref": "Vref (V)",
+    "regulator_vout": "Vout (V)",
+    "regulator_r1": "R1 (Ω)",
+    "regulator_r2": "R2 (Ω)",
+    "rc_time_constant": "RC 時間常數計算器",
+    "rc_desc": "RC 充放電時間常數與 RC 濾波器截止頻率。τ = R×C，fc = 1/(2πRC)",
+    "rc_r": "R",
+    "rc_c": "C",
+    "smd_resistor": "貼片電阻計算器",
+    "smd_mode_3digit": "3位 EIA",
+    "smd_mode_4digit": "4位 EIA",
+    "smd_mode_eia96": "EIA-96",
+    "smd_desc_3digit": "前2位為有效數字，第3位為10的冪。R 表示小數點位置，如 4R7=4.7Ω、472=4.7kΩ。",
+    "smd_desc_4digit": "前3位為有效數字，第4位為10的冪。R 表示小數點，如 1002=10kΩ。",
+    "smd_desc_eia96": "2位數字碼(01-96)+1個字母(倍率)。數字對應 E96 基準值，字母 Y=0.01、X=0.1、A=1、B=10、C=100、D=1k、E=10k、F=100k。",
+    "smd_d1": "第1位",
+    "smd_d2": "第2位",
+    "smd_d3": "第3位",
+    "smd_mult": "倍率",
+    "smd_eia96_code": "數字碼 (01-96)",
+    "smd_eia96_mult": "倍率字母",
+    "smd_preview": "貼片電阻示意",
+    "smd_result": "阻值結果",
+    "led_resistor": "LED 限流電阻計算器",
+    "led_resistor_desc": "計算在指定電流下驅動一個或多個串聯 LED 所需電阻。",
+    "led_resistor_hint": "建議選擇功率為計算值 2~10 倍的電阻，避免過熱。",
+    "led_vs": "電源電壓",
+    "led_vf": "正向電壓",
+    "led_if": "正向電流",
+    "led_if_dim": "微微亮",
+    "led_if_dim_desc": "暗環境可見，白天基本看不出。實測很多 LED 在 0.05mA 都會發光",
+    "led_if_weak": "很暗",
+    "led_if_weak_desc": "明顯發光但很弱，適合夜間指示燈、低功耗狀態提示",
+    "led_if_medium": "中等亮度",
+    "led_if_medium_desc": "室內光線下清楚可見，不刺眼，非常省電。5mA 已有約 70% 視覺亮度",
+    "led_if_bright": "高亮",
+    "led_if_bright_desc": "明顯亮，絕大多數產品默認工作區間",
+    "led_if_max": "最亮",
+    "led_if_max_desc": "20mA 為常見標稱額定最大持續電流",
+    "led_count": "串聯 LED 數量",
+    "led_r_result": "電阻值",
+    "led_p_result": "電阻功耗",
+    "led_formula": "公式",
+    "led_circuit": "電路示意圖",
+    "led_vf_table": "LED 顏色典型正向電壓範圍",
+    "led_table_color": "顏色",
+    "led_table_vf": "Vf 範圍 (V)",
+    "led_color_red": "紅",
+    "led_color_amber": "琥珀",
+    "led_color_orange": "橙",
+    "led_color_yellow": "黃",
+    "led_color_green": "綠",
+    "led_color_blue": "藍",
+    "led_color_white": "白",
     "btn_analyze": "分析",
     "btn_export": "導出",
     "btn_import": "導入",
